# Vision_based_Navigation_TTT_IL_Learning

./: .gitignore  CMakeLists.txt  README.md  package.xml
GazeboWorlds/: corridor_2.sdf  corridor_2.world  lab_maze.world  move_capsule_ellipse.py  test.sdf
config/: control.yaml
docker/: Dockerfile  bash_aliases.txt  build.sh  docker-compose.yml  workspace.sh
gui/: gui.config
launch/: jackal.launch.py  jackalTest.launch.py  jackal_marker.launch.py  jackal_real_world.launch.py  jackal_world.py  spawn_jackal.py
materials/scripts/: bernoulli8.material
msg/: OpticalFlow.msg
nodes/: controller.py  il_bc_controller.py  laneAnimation.py  laneAnimation2.py  optical_flow.py  record_il_demos.py  road_marker.py  tau_computation.py  virtualWalls.py
scripts/: Bernoulli_Textures.py  key_teleop_stamped.py  move_capsule.py
urdf/: jackal.urdf.xacro
urdf/controls/: gazebo_sim_ros2_control.urdf.xacro  jackal_ros2_control.urdf.xacro
